2022-01-15 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/support/regression/tests/reentrant.c:
      Disable failing test for DS390 port.
    * sdcc/support/regression/tests/bug-3129.c:
      Disable failing test for MOS6502 port.

2022-01-14 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/gen.c:
      Imporve genAddrOf.

2022-01-14 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/gen.c:
      Fix gcc-torture-execute-981001-1 regression failure.

2022-01-14 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/gen.c,
      sdcc/device/lib/mos6502/crt0.s:
      Remove use of BASEPTR.

2022-01-14 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/gen.c:
      Let storeConstToAop use X and Y as well.

2022-01-14 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/ralloc.h,
      sdcc/src/mos6502/gen.c:
      Refactor genAssignLit and remove old defines.

2022-01-13 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/support/regression/tests/reentrant.c:
      Reduce recursion depth to fit into mcs51 stack.

2022-01-12 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/main.c:
      Fix library names.

2022-01-12 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/support/regression/tests/reentrant.c:
      Add reentrant function regression test.

2022-01-11 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/gen.c:
      Fix gcc-torture-execute-990128-1 regression failure.

2022-01-11 Daniel Drotos <drdani@mazsola.iit.uni-miskolc.hu>

    * sdcc/support/regression/ports/mcs51-common/spec.mk:
      Generate debug info when compile regtest of mcs51 ports.

2022-01-11 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/gen.c:
      Fix bug #3304.

2022-01-11 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/gen.c:
      Fix bug1115321 regression failure.

2022-01-11 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/gen.c:
      Fix gcc-torture-execute-pr34456 regression failure.
